--- a/netflix_login/index.html
+++ b/netflix_login/index.html
@@ -9,7 +9,60 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <header class="site-header">
+        <img src="img/logo.svg" alt="logotipo" class="logotipo">
+    </header>
 
+    <main class="formulario-login contenedor">
+        <form action="#">
+            <legend>Inicia sesión</legend>
+            <div class="campo">
+                <input type="text" id="usuario">
+                <label>Email o número de teléfono</label>
+            </div>
+            <div class="campo">
+                <input type="password" id="password">
+                <label>Contraseña</label>
+                <span>MOSTRAR</span>
+            </div>
+            <div class="submit">
+                <input type="submit" value="Iniciar sesión">
+            </div>
+            <div class="acciones">
+                <div class="recuerdame">
+                    <input type="checkbox">
+                    <label>Recuérdame</label>
+                </div>
+                <div class="ayuda">
+                    <a href="#">¿Necesitas ayuda?</a>
+                </div>
+            </div>
+        </form>
 
+        <div class="contenido-inferior">
+            <a href="#">Iniciar sesión con facebook</a>
+            <p href="#" class="nuevo-usuario">
+                ¿Pimera vez en Netflix <a href="#">Suscríbete ya!</a>
+            </p>
+        </div>
+
+    </main>
+
+    <footer class="site-footer">
+        <div class="contenedor">
+            <p>¿Preguntas? Llama al 4488-123</p>
+            <nav class="menu-footer">
+                <a href="#">Términos de la tarjeta de regalo</a>
+                <a href="#">Términos de uso</a>
+                <a href="#">Declaración de privacidad</a>
+            </nav>
+
+            <select class="lenguaje">
+                <option value="eng">English</option>
+                <option value="esp">Español</option>
+            </select>
+        </div>
+    </footer>
+<script src="./js/scripts.js"></script>
 </body>
 </html>
